--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "antd": "^5.21.6",
     "antd-img-crop": "^4.23.0",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0"
   },
