--- a/.hintrc
+++ b/.hintrc
@@ -8,6 +8,9 @@
       {
         "label": "off"
       }
-    ]
+    ],
+    "typescript-config/is-valid": "off",
+    "typescript-config/consistent-casing": "off",
+    "typescript-config/strict": "off"
   }
 }
